--- a/Documents/CHALOYARD Nicolas - Documentation technique.tex
+++ b/Documents/CHALOYARD Nicolas - Documentation technique.tex
@@ -1,3 +1,121 @@
+\documentclass[12pt,a4paper]{article}
+
+% Import des packages 
+\usepackage[french]{babel}
+\usepackage[utf8x]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[dvipsnames]{xcolor}
+
+%Define the listing package
+\usepackage{listings} %code highlighter
+\usepackage{color} %use color
+\definecolor{mygreen}{rgb}{0.2,0.7,0.1}
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\definecolor{mymauve}{rgb}{0.58,0,0.82}
+
+%Customize a bit the look
+\lstset{
+	backgroundcolor=\color{white}, % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
+	basicstyle=\footnotesize, % the size of the fonts that are used for the code
+	breakatwhitespace=false, % sets if automatic breaks should only happen at whitespace
+	breaklines=true, % sets automatic line breaking
+	captionpos=b, % sets the caption-position to bottom
+	commentstyle=\color{mygreen}, % comment style
+	deletekeywords={...}, % if you want to delete keywords from the given language
+	escapeinside={\%*}{*)}, % if you want to add LaTeX within your code
+	extendedchars=true, % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+	frame=single, % adds a frame around the code
+	keepspaces=true, % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+	keywordstyle=\color{blue}, % keyword style
+	% language=Octave, % the language of the code
+	morekeywords={*,...}, % if you want to add more keywords to the set
+	numbers=left, % where to put the line-numbers; possible values are (none, left, right)
+	numbersep=5pt, % how far the line-numbers are from the code
+	numberstyle=\tiny\color{mygray}, % the style that is used for the line-numbers
+	rulecolor=\color{black}, % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+	showspaces=false, % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+	showstringspaces=false, % underline spaces within strings only
+	showtabs=false, % show tabs within strings adding particular underscores
+	stepnumber=1, % the step between two line-numbers. If it's 1, each line will be numbered
+	stringstyle=\color{mymauve}, % string literal style
+	tabsize=2, % sets default tabsize to 2 spaces
+	title=\lstname % show the filename of files included with \lstinputlisting; also try caption instead of title	
+}
+
+%END of listing package%
+
+\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{purple}{rgb}{0.65, 0.67, 0.69}
+
+%define Javascript language
+\lstdefinelanguage{JavaScript}{
+	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+	keywordstyle=\color{blue}\bfseries,
+	ndkeywords={class, export, boolean, throw, implements, import, this},
+	ndkeywordstyle=\color{darkgray}\bfseries,
+	identifierstyle=\color{black},
+	sensitive=false,
+	comment=[l]{//},
+	morecomment=[s]{/*}{*/},
+	commentstyle=\color{mygreen}\ttfamily,
+	stringstyle=\color{red}\ttfamily,
+	morestring=[b]',
+	morestring=[b]"
+}
+
+\lstset{
+	language=JavaScript,
+	extendedchars=true,
+	basicstyle=\footnotesize\ttfamily,
+	showstringspaces=false,
+	showspaces=false,
+	numbers=left,
+	numberstyle=\footnotesize,
+	numbersep=9pt,
+	tabsize=1,
+	breaklines=true,
+	showtabs=false,
+	captionpos=b
+}
+
+% Informations du document 
+\title{Chasse au trésor - Documentation technique}
+\author{Nicolas CHALOYARD}
+\date{20 mai 2022}
+
 \begin{document}
-    
+	\maketitle
+	\newpage
+
+	\tableofcontents 
+	\newpage
+
+    \section{introduction}
+    	Ce document est une documentation technique écrite en LaTex sur le projet de chasse au trésor. \newline
+    	Il y sera décrit : 
+    	\begin{itemize}
+    		\item Les classes ; 
+    		\item Les attributs ;
+    		\item Les méthodes ;
+    	\end{itemize}
+    	Il y sera également décrit : 
+    	\begin{itemize}
+    		\item Les soucis techniques ;
+    		\item Les manques ;
+    		\item Les améliorations é apporter ;
+    		\item Les possibles évolutions qui pourraient étre apportées ; 
+    	\end{itemize}
+   	\newpage
+   	
+   	\section{Partie 1 / Description du fichier \color{red}{jeu.js}}
+   		\subsection{Les classes}
+    	 	\subsubsection{Classe \color{red}{Jeu}}
+    	 		\begin{lstlisting}[caption={Attributs classe jeu}]
+    	 			item = new Item();
+    	 			carte = document.getElementById("carte");
+    	 			x = 10; // Nombre de lignes
+    	 			y = 10; // Nombre de colonnes
+				    ids = []; // Tableau des ids des cases selectionnees
+			    \end{lstlisting}
+
 \end{document}
